# pytest-suite-timeout

./: .coveragerc  .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: RELEASING.md
.github/workflows/: main.yml
src/pytest_suite_timeout/: plugin.py
tests/: test_slow.py  test_suite_timeout.py
